litellm/50-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm
  namespace: litellm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`litellm.__DOMAIN__`)
      kind: Rule
      middlewares:
        - name: hermes-basic
          namespace: auth
      services:
        - name: litellm
          port: 4000
  tls:
    __TLS__
